--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <a href="https://github.com/MCambie">
               <i class="fab fa-github"></i>
             </a>
-            <a href="#">
+            <a href="https://twitter.com/marie_cambie">
               <i class="fab fa-twitter"></i>
             </a>
           </div>
@@ -71,7 +71,7 @@
     
     <hr class="m-0">
     
-    <section class="work-section p-3 p-lg-5 d-flex justify-content-center">
+    <section class="work-section p-3 p-lg-5 d-flex justify-content-center" id="work">
       <div class="w-100">
         <div class="work">
           <h2 class="text-center mb-5">Some of my works</h2>
