correction date and logo shopify

--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
                       <h3 class="mb-0">Maison de la Culture Bourges</h3>
                       <div class="subheading mb-3">E-shop</div>
                       <p>First try with shopify for the MCB e-shop.</p>
-                      <p>Coded for <a href="https://www.signelazer.com/" target="_blank">signelazer</a> - 2021.</p>
+                      <p>Coded for <a href="https://www.signelazer.com/" target="_blank">signelazer</a> - 2022.</p>
                       <div class="tools subheading mb-3">Tools Used :</div>
                       <div class="row mb-2">
-                        <div class="col-lg-4 col-md-4 col-sm-4 col-4">
-                          <img class="img-fluid my-auto" src="img/shopify.png.crdownload" alt="shopify">
+                        <div class="col-6">
+                          <img class="img-fluid my-auto" src="img/2560px-Shopify_logo_2018.svg.png" alt="shopify">
                         </div>
                       </div>
                       <div class="row github-work"><p class="subheading mb-3 col-lg-9 col-md-9 col-sm-9 col-9">
@@ -231,7 +231,7 @@
                       <h3 class="mb-0">CBAI</h3>
                       <div class="subheading mb-3">Centre bruxellois d'action interculturelle</div>
                       <p>Creation of the new dynamic client website according to the webdesign furnished by the designer. I did the front part and my colleague coded the wordpress back-office part. Learning <a href="https://tailwindcss.com/" target="_blank">tailwind</a>,<a href="https://www.algolia.com/" target="_blank"> algolia</a> and <a href="https://alpinejs.dev/" target="_blank">alpinejs</a> during this project.</p>
-                      <p>Coded for <a href="https://www.signelazer.com/" target="_blank">signelazer</a> - 2021.</p>
+                      <p>Coded for <a href="https://www.signelazer.com/" target="_blank">signelazer</a> - 2022.</p>
                       <div class="tools subheading mb-3">Tools Used :</div>
                       <div class="row mb-2">
                         <div class="col-lg-4 col-md-4 col-sm-4 col-4">
